Wed Feb  5 19:07:37 UTC 2014  Steve Huston  <shuston@riverace.com>

        * rpmbuild/ace-tao.spec: Added support for --without tao (and
          --with tao), defaulting to --with tao. Allows one to build just
          the ACE RPMs from an ACE-src tarball.

        * NEWS: Added note about being able to build ACE RPMs.

Thu Dec 12 16:28:45 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/ATM_Stream.cpp: Add missing OS_NS_string.h

Fri Sep 27 21:33:58 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp: Same fix as Thu Sep 26 20:22:53 made to recvv_n_i(),
          sendv_n_i(), readv_n(), writev_n().

        * ace/FILE_IO.cpp (recvv): Resolve 64-bit compile warnings and ensure
          that no more is read than can be accurately reported.

        * ace/INET_Addr.cpp (set):
        * ace/Ping_Socket.cpp:
        * ace/Process.inl (command_line_buff):
          Resolve 64-bit compile warning on Windows.

Thu Sep 26 20:22:53 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (recvv_n_i): Resolve 64-bit compile warning on Windows.

Thu Aug 29 22:06:55 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_unistd.inl (swab): Added support for ACE_HAS_INT_SWAB for
          platforms where the 'length' arg to swab() is an int instead of
          the standard ssize_t.

        * ace/config-win32-common.h: Added ACE_HAS_INT_SWAB

        * tests/OS_Test.cpp: Added a ACE_OS::swab() test.

        * ace/README: Added ACE_HAS_INT_SWAB description.

Mon May 27 10:09:24 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.0 released.

Tue May 21 17:24:39 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_16_Test.cpp:
          Added a forward declared enum after it has been declared

Mon May 20 18:40:20 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_16_Test.cpp:
          Added also a forward declared enum
